--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   web_socket_channel: ^3.0.3
   http: ^0.13.6
   get_storage:
+  dio:
   get:
   provider:
 #  flutter_vlc_player: ^7.4.3
